<resources>
    <string name="no_image_selected">No Image Selected</string>
    <string name="default_image_selected">Default Image will be used</string>
    <string name="begin">Start</string>
    <string name="start">Begin</string>
    <string name="beginHeader">So Let\'s Begin!</string>
    <string name="app_name">Flip Me</string>
    <string name="help">Help</string>
    <string name="shareUrl">Hello Friends, Do enjoy our time buster game. " +
                        "Please install from google play: https://play.google.com/store/apps/details?id=com.board.game.sasha</string>
    <string name="HelpTitle">Tips to play</string>
    <string name="numberHelp">a. Number Puzzle:=> Slide the tiles left,right,top or bottom to arrange the numbers
                 in increasing order from top to bottom eg: 0,1,2,3......</string>
    <string name="pictureHelp">b. Picture Puzzle:=> Slide the picture tiles to make a complete picture</string>
    <string name="finishHelp">Happy Flip-Flop :)</string>
    <string name="gridHelp">c. Change Grid Size in Game Settings.</string>
    <string name="soundHelp">d. Switch on/off the slide sounds.</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="white">white</string>
    <string name="black">black</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="number">number</string>
    <string name="picture">picture</string>
    <string name="login_instructions">Share our app</string>
    <string name="share_instructions">Enter share message</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="btn_share">Share</string>
    <string name="share_us">Share us on:-</string>
    <string name="your_move">Moves taken: %1s </string>
    <string name="your_time">Finish Time: %2s</string>
    <string name="no_saved_result">Nothing Best Available :(</string>
    <!-- Twitter Configurations -->
    <string name="twitter_callback">http://www.facebook.com/delhimetroassistant</string>
    <string name="twitter_consumer_key">Llu66fenmKiftfDTL5T3rRpKH</string>
    <string name="twitter_consumer_secret">AmQzXdkknF5Xf2qSzbvFNCWsNeukGQJMQKWN2CLVHJszRFp95c</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <!-- End Configurations -->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Game Settings</string>
    <string name="configuration">Options</string>
    <string name="share_fb">Share us on Facebook</string>
    <string name="share_tw">Share us on Twitter</string>
    <string name="best_Score">Best Score</string>
    <string name="new_game">New Game</string>
    <string name="continue_last">Continue Last</string>
    <string name="title_activity_settings_screen">SettingsScreen</string>
    <string name="title_activity_front_page">FrontPage</string>
	<string name="play">Play</string>
    <string name="version">Version:%1s</string>
    <string name="facebook_app_id">1687754891454556</string>
</resources>
