<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/HelpTitle"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/numberHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/numberHelp"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/pictureHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pictureHelp"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/finishHelp"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>