<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.test.board.FrontPage"
    android:gravity="center|bottom"
    android:layout_marginBottom="50dp">


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/continue_last"
        android:text="@string/continue_last" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/new_game"
        android:text="@string/new_game" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/config"
        android:text="@string/configuration" />
</LinearLayout>
