<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_saved_result"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_move"
        android:textStyle="italic"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_time"
        android:textStyle="italic"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>